# dimatech-payments-api

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  api.py  config.py  database.py  errors.py  models.py  schemas.py  security.py  server.py
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: conftest.py  test_api.py
