[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "dimatech-payments-api"
version = "0.1.0"
description = "Asynchronous REST API for users, accounts and idempotent payment webhooks"
requires-python = ">=3.12"
dependencies = [
    "sanic>=25.12,<26",
    "SQLAlchemy[asyncio]>=2.0.49,<2.1",
    "asyncpg>=0.31,<1",
    "alembic>=1.18.4,<2",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.12,<3",
    "PyJWT>=2.10,<3",
    "argon2-cffi>=25.1,<26",
]

[project.optional-dependencies]
test = [
    "aiosqlite>=0.22,<1",
    "pytest>=9,<10",
    "pytest-asyncio>=1.3,<2",
    "sanic-testing>=24.6,<25",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

